# user-intent-classisifer

./: .coverage  .gitignore  Dockerfile  README.md  pyproject.toml  pytest.ini
config/: config.example.yaml
data/: eval_set.csv
scripts/: demo_router.py  eval_harness.py  perf_test.py  prd.md
src/: main.py
src/query_router/api/: models.py  router.py
src/query_router/core/: config.py  exceptions.py  logging.py
src/query_router/models/: classifier.py  llm_router.py  prompt_guard.py
src/query_router/services/: router_service.py
tests/: conftest.py  test_llm_router.py  test_prompt_guard.py
tests/query_router/api/: test_route_endpoint.py  test_router.py
tests/query_router/models/: test_classifier.py
